Added thesis outline + ATLAS paper

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -1,7 +1,7 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 \vspace{-1em}
-Put your abstract here.
+Put your abstract here. \emph{An abstract of 250-500 words is on the page or pages following the acknowledgement. The electronic version of the abstract must use standard text only.}
 
 %%% Local Variables: 
 %%% mode: latex
