--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -1,3 +1,5 @@
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
 Who do you want to thank?
+
+Remember to thank the ASA for funding!
