--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -1,1 +1,3 @@
 % \appendix
+
+\emph{The thesis may also include relevant appendices containing additional papers that are not related to the main thrust of the thesis, raw data, programs, questionnaires and other material as deemed appropriate for each discipline.}
