--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -2,6 +2,7 @@
 \label{cha:conc}
 Summary your thesis and discuss what you are going to do in the future in Section~\ref{sec:future}.
 
+\emph{A conclusion drawing together the published papers or works in a cohesive manner, and addresses how the individual publications link to the theory and methodology adopted and evaluate the contribution that the research in the submitted publications makes to the advancement of the research area.}
 
 \section{Future Work}
 \label{sec:future}
