--- a/thesis/frontmatter.tex
+++ b/thesis/frontmatter.tex
@@ -1,7 +1,8 @@
+%!tex root=./thesis.tex
 \vspace*{14cm}
 \begin{center}
   \makeatletter
-  \copyright\ \@author{} 2020
+  \copyright\ \@author{} 2020\\All rights reserved
   \makeatother
 \end{center}
 \noindent
@@ -12,11 +13,37 @@
 
 \newpage
 
+% \emph{
+%     A thesis by compilation includes a signed declaration that specifies:
+
+%     Title, authorship and publication outlet of each paper.
+%     The current status of each paper (In press, Accepted, Under Review, In preparation).
+%     The extent of the contribution of the candidate to the research and the authorship of each paper.
+
+    % For each paper where the candidate is not the sole author, either:
+
+    % The collaborating authors sign the declaration; or
+    % A senior author signs the declaration on behalf of the collaborating authors
+
+% }
+
 \vspace*{7cm}
-\begin{center}
-  Except where otherwise indicated, this thesis is my own original
-  work.
-\end{center}
+    This thesis is submitted as a Thesis by Compilation in accordance with the
+    Australian National University Procedure ANUP\textunderscore{}003405. I declare that the
+    research presented in this thesis represents original work that I carried
+    out during my candidature at the Australian National University, except
+    for contributions to multi-author papers incorporated in the thesis where
+    my contributions are specified in this Statement of Contribution.
+
+    Title and authors: ...
+
+    Current status of paper: (Not Yet Submitted/Submitted/Under Revision/Accepted/Published)
+
+    Contribution to paper: ...
+
+    Senior author or collaborating authors endorsement: ...
+
+    [repeat for each paper]
 
 \vspace*{4cm}
 
