--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -1,6 +1,8 @@
 \chapter{Introduction}
 \label{cha:intro}
 
+\emph{An introduction to the field of study and the hypothesis or research questions, how these are addressed through the ensuing chapters, and a general account of the theory and methodological components of the research where these components may be distributed across separate papers/chapters.}
+
 
 \section{Thesis Statement}
 \label{sec:thesisstatement}
@@ -17,6 +19,4 @@ thesis!!!}
 
 \section{Thesis Outline}
 \label{sec:outline}
-How many chapters you have? You may have Chapter~\ref{cha:background},
-Chapter~\ref{cha:design}, Chapter~\ref{cha:methodology},
-Chapter~\ref{cha:result}, and Chapter~\ref{cha:conc}.
+How many chapters you have? Chapter~\ref{cha:conc}...
