--- a/thesis/titlepage.tex
+++ b/thesis/titlepage.tex
@@ -1,3 +1,4 @@
+%!tex root=./thesis.tex
 %% anuthesis.sty Copyright (C) 1996, 1997 Steve Blackburn
 %% Department of Computer Science, Australian National University
 %%
@@ -14,10 +15,9 @@
 %%    Master of Philosophy at \\
 %%    The Australian National University \\[2cm]
     \LARGE A thesis submitted for the degree of \\
-    Doctor of Philosophy \\
-    Research School of Astronomy and Astrophysics\\
-    The Australian National University \\
-    \includegraphics{logo/ANU_LOGO_CMYK_56mm.eps}\\[2cm]
+    Doctor of Philosophy\\
+    of The Australian National University \\
+    \includegraphics{logo/ANU_LOGO_CMYK_56mm.eps}\\
     \thismonth
   \end{center}
 \end{titlepage}
