--- a/thesis/frontmatter.tex
+++ b/thesis/frontmatter.tex
@@ -28,12 +28,11 @@
 % }
 
 \vspace*{7cm}
-    This thesis is submitted as a Thesis by Compilation in accordance with the
-    Australian National University Procedure ANUP\textunderscore{}003405. I declare that the
-    research presented in this thesis represents original work that I carried
-    out during my candidature at the Australian National University, except
-    for contributions to multi-author papers incorporated in the thesis where
-    my contributions are specified in this Statement of Contribution.
+    I declare that the research presented in this thesis represents original
+    work that I carried out during my candidature at the Australian National
+    University, except for contributions to multi-author papers incorporated
+    in the thesis where my contributions are specified in this Statement of
+    Contribution.
 
     Title and authors: ...
 
