--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -1,22 +1,15 @@
+%!tex root=./thesis.tex
 \chapter{Introduction}
 \label{cha:intro}
 
-\emph{An introduction to the field of study and the hypothesis or research questions, how these are addressed through the ensuing chapters, and a general account of the theory and methodological components of the research where these components may be distributed across separate papers/chapters.}
 
-
-\section{Thesis Statement}
-\label{sec:thesisstatement}
-I believe A is better than B.
-
-
-\section{Introduction}
-\label{sec:problemstatement}
-Put your introduction here. You could use \textbackslash fix\{ABCDEFG.\} to
-leave your comments, see the box at the left side. \fix{You have to rewrite your
-thesis!!!} 
-
+\section{Motivation}
+\label{sec:motivation}
 
 
 \section{Thesis Outline}
 \label{sec:outline}
-How many chapters you have? Chapter~\ref{cha:conc}...
+
+
+\section{Contributions}
+\label{sec:contributions}
