--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -106,7 +106,10 @@
 \mainmatter
 
 \input{intro}
-\input{atlas}
+\input{background}
+\input{xid}
+\input{rlfs}
+\input{faraday}
 \input{conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -122,3 +125,4 @@
 \printindex
 
 \end{document}
+
