initial thesis shenanigans

--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -62,7 +62,7 @@
 % \usepackage{aastexmacros}
 \usepackage{tikz}
 \usepackage[algoruled]{algorithm2e}
-\usepackage[caption=false]{subfig}
+\usepackage{subfig}
 \usepackage[mediumspace,mediumqspace,squaren]{SIunits}
 % \usepackage{pdflscape}
 
@@ -148,3 +148,9 @@
 %%% mode: latex
 %%% TeX-master: "doa"
 %%% End:
+
+
+\newcommand{\citeneeded}{{\color{blue} \textsuperscript{citation needed}}}
+\newcommand{\defn}[1]{\emph{#1}}
+\newcommand{\deriv}[2]{\frac{\mathrm{d}{#1}}{\mathrm{d}{#2}}}
+\usepackage{amsmath}
