--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -26,7 +26,7 @@
 \usepackage[table]{xcolor}
 \usepackage{makeidx}
 % \usepackage{cleveref}
-\usepackage[centerlast]{caption2}
+% \usepackage[centerlast]{caption2}
 \usepackage{float}
 \urlstyle{sf}
 \renewcommand{\sfdefault}{uop}
