--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -4,10 +4,164 @@
 
 I'll need to explain the purpose of this chapter and give a brief outline. There'll be three sections, and I'll briefly summarise them here.
 
+    \begin{figure}[ht]
+        \includegraphics[width=\textwidth]{images/gleam.jpg}
+        \caption{\label{fig:gleam} False-colour image of the radio sky from the GLEAM survey. (Image: Natasha Hurley-Walker, Curtin University/ICRAR \citeneeded)}
+    \end{figure}
+
 \section{Astrophysics of Extended Radio Sources}
 \label{sec:physics-of-radio-sources}
 
-In this section I'll talk about extended radio sources: AGN, their jets, and the unified model as described by Urry and Padovani. I'll need to talk about synchrotron radiation and the AGN core and jets. It'd also make sense to talk about observational classes, including FRI and FRII, and how orientation affects this. How do radio objects evolve over time? What are the main questions in the field?
+    % In this section I'll talk about extended radio sources: AGN, their jets, and the unified model as described by Urry and Padovani. I'll need to talk about synchrotron radiation and the AGN core and jets. It'd also make sense to talk about observational classes, including FRI and FRII, and how orientation affects this. How do radio objects evolve over time? What are the main questions in the field?
+
+    The extragalactic sky appears quite different at different wavelengths. While an optical observer may look at a distant galaxy and see spirals and halos, an infrared observer will see discs and dust. What does the radio astronomer see? 
+
+    \autoref{fig:gleam} shows a false-colour image of the radio sky. The disc of the Milky Way is clearly visible through the center, but nearly every other object in this image is a galaxy. These galaxies fall into two main categories: those that emit radio due to star formation, and those that emit radio due to \defn{active galactic nuclei} (AGN). Since star formation is limited to the galaxy proper (usually within tens of kiloparsecs of the galaxy centre), and the resolution of wide radio surveys tends to be upwards of 5 arcseconds, most star forming galaxies appear unresolved in radio, and the extended sources are dominated by AGN.
+
+    AGN are some of the most energetic objects in the Universe. They both provide a laboratory for extreme physics and are a key part of the life cycle of a galaxy \citep{heckman_coevolution_2014}. Powered by a supermassive black hole, they convert gravitational potential energy into intense electromagnetic radiation at a broad range of frequencies. AGN that produce strong radio emission are called radio AGN, and methods of observing the complex structures that these radio AGN form will be the focus of this thesis.
+
+    \subsection{Active galactic nuclei}
+    \label{sec:agn}
+
+        \begin{figure}
+            \centering
+            \includegraphics[width=\textwidth]{images/agn.eps}
+            \caption{\label{fig:agn} The unified model of AGN.}
+        \end{figure}
+
+        At their core, AGN are an accreting \defn{supermassive black hole}: a body so dense that even light cannot escape its gravitational pull, with mass on the order of $10^7$--$10^9\ \mathrm{M}_\odot$ \citeneeded{}. Such black holes seem to exist at the centre of galaxies\citeneeded{} and these galaxies are called \defn{host galaxies}. The current understanding of the structure of an AGN is as follows \citep{urry_unified_1995}. The black hole is surrounded by an accretion disc emitting in ultraviolet and X-ray. Beyond this is the broad-line region, named for the broad emission lines emitted by clouds of material surrounding the accretion disc. The broad-line region and accretion disc are themselves surrounded by a dusty torus (or some other disc-like structure) which prevents light from the centre of the AGN being observed from the sides. Further still from the accretion disc is the narrow-line region, where lower-energy gas produces narrow emission lines. From either side of the disc, an AGN produces two collimated outflows of relativistic plasma called {jets}, and these jets interact with gas in the host galaxy to produce bright radio emission. As the jets disperse further out from the centre of the AGN they widen into plumes of plasma known as \defn{lobes}. This model of AGN unifies different observed classes of AGN by their orientation and luminosity, and is hence known as the \defn{unified model} \citep{antonucci_unified_1993}.
+
+        There are many different ways to divide the set of radio AGN into classes. By morphology, radio AGN are often divided by the structure of the jets and lobes: Fanaroff-Riley type I (FRI) and Fanaroff-Riley type II (FRII) are the most striking examples, with FRI having wavy, diffuse lobes; and FRII having long, tightly-collimated jets and sharp-edged lobes with bright hot-spots \citep{urry_unified_1995}. FRII are also generally higher-luminosity \citep{fanaroff_morphology_1974} than FRI and therefore make up the majority of observed extended radio sources throughout the Universe. AGN can also be divided into \defn{radiative-mode} and \defn{jet-mode} by how they expel their energy \citep{heckman_coevolution_2014}. Radiative-mode AGN produce radiative energy in amounts higher than 1 percent of their Eddington limit, while jet-mode AGN mainly output energy through their jets. The Eddington limit describes the maximum luminosity that a compact object can emit, and is given in \autoref{eq:eddington} \citep{rybicki_radiative_1979}:
+        \begin{equation}
+            L_{\mathrm{Eddington}}(M) = \frac{4\pi G M m_p c}{\sigma_T}.
+            \label{eq:eddington}
+        \end{equation}
+        Optical emission observed near the centre of the AGN can be used to divide radio AGN into broad-line and narrow-line galaxies: the former are AGN seen end-on, and the latter are AGN seen edge-on with the dusty torus obscuring the broad-line region and are the only ones for which we see significant extended structure.
+
+        The jets and lobes of AGN can be very extended, with the largest known radio galaxies measuring over 4 Mpc end-to-end \citep{machalski_understanding_2011}. This is much larger than the radius of their host galaxies, and so the jets and lobes of AGN are uniquely posed to interact with the local environment. Environmental interactions both within and outside the host galaxy warp and distort the jets and lobes and lead to a great variety of exotic-shaped radio galaxies.
+
+    \subsection{Radio emission from AGN}
+        
+        Most radio emission from AGN is \defn{synchrotron radiation}, produced by relativistic charged particles accelerating in a magnetic field. A non-relativistic charged particle will spiral with a fixed angular frequency when it moves in a magnetic field in a process called \defn{gyro radiation}. Synchrotron radiation is a relativistic effect: it can be thought of as gyro radiation Lorentz transformed to energies much greater than $mc^2$. The spectrum of synchrotron radiation follows a power law \citep{condon_essential_2016}:
+        \begin{equation}
+            \label{eq:spectral-index}
+            S(\nu) \propto \nu^{\alpha}.
+        \end{equation}
+        $\alpha$ is called the \defn{spectral index}\footnote{Note that the sign of $\alpha$ varies by convention, and both $S \propto \nu^{\alpha}$ and $S \propto \nu^{-\alpha}$ exist in the literature.}. It is related to the energy distribution of the emitting electrons: assuming that the electron energy distribution follows a power law (which it generally does\citeneeded), where the number density of electrons at a given energy $E$ is given by
+        \begin{equation}
+            n(E) \propto E^\Gamma,
+        \end{equation}
+        then
+        \begin{equation}
+            \alpha = \frac{\Gamma - 1}{2}.
+        \end{equation}
+        AGN cores tend to have spectral indices around -0.7 \citeneeded, while the spectral index of the lobes is higher \citeneeded.
+
+        % The most general form of the electric field in an electromagnetic wave, propagating in the $\hat z$ direction, is
+        % \begin{equation}
+        %     \vec E = (\hat x E_x \exp^{i\varphi_x} + \hat y E_y \exp^{i\varphi_y}) e^{i(k \hat z \cdot \vec r - \omega t)}
+        % \end{equation}
+        % where $\vec r$ is the position vector and $k$ is the \defn{wavenumber}. This is the composition of two orthogonal waves
+
+        \subsubsection{Polarisation}
+        \label{sec:polarisation}
+
+            \todo{This section is kinda terrible! Rewrite to be in terms of two orthogonal waves (-> linear polarisation) and if these are out of phase we have circular polarisation. Introduce the Poincar\'e sphere or at least an ellipse?}
+            An electromagnetic wave travels at an angle. This angle and its behaviour is called the \defn{polarisation} of the wave. As this wave propagates along the line-of-sight toward an observer, the electric field oscillates in an ellipse across the plane. This ellipse can be characterised by the \defn{Stokes parameters}. Split the electric field $\vec E$ along the $x$--$y$ plane perpendicular to the line-of-sight $\hat z$ into two orthogonal components $E_x$ and $E_y$:
+            \begin{equation}
+                \vec E = (\hat x E_x \exp(i \varphi_x) + \hat y E_y \exp(i \varphi_y)) \exp(i (\vec k \cdot \hat z - \omega t)).
+            \end{equation}
+            $\vec k$ is the \defn{wave vector} which points in the direction of travel and has magnitude $2\pi/\lambda$ and $\omega = 2\pi\nu$ is the \defn{angular frequency}. $\varphi_x$ and $\varphi_y$ are the phase offsets of each component. The Stokes parameters are then \citep{condon_essential_2016}
+            \begin{align}
+                \label{eq:stokes-i}
+                I &= \frac{1}{R_0} \mathbb E_t[E_x^2 + E_y^2],\\
+                \label{eq:stokes-q}
+                Q &= \frac{1}{R_0} \mathbb E_t[E_x^2 - E_y^2],\\
+                \label{eq:stokes-u}
+                U &= \frac{1}{R_0} \mathbb E_t[2 E_x^2 E_y^2 \cos (\varphi_x - \varphi_y)],\\
+                \label{eq:stokes-v}
+                V &= \frac{1}{R_0} \mathbb E_t[2 E_x^2 E_y^2 \sin (\varphi_x - \varphi_y)].
+            \end{align}
+            $I$ is the \defn{total intensity}. $Q$ and $U$ together describe the \defn{linear polarisation}, which is related to the angle of the ellipse described above, called the \defn{polarisation angle} $\chi$:
+            \begin{equation}
+                \label{eq:polarisation-angle}
+                \tan (2 \chi) = \frac{U}{Q}.
+            \end{equation}
+            $V$ is called the \defn{circular polarisation} and describes the eccentricity of this ellipse. For most extragalactic sources, the circular polarisation is zero \citeneeded because \todo{reasons}. The polarised intensity is
+            \begin{equation}
+                \label{eq:polarised-intensity}
+                P^2 = Q^2 + U^2 + V^2.
+            \end{equation}
+            Note that $P^2 \leq I^2$. The \defn{fractional polarisation} is the ratio between these two intensities:
+            \begin{equation}
+                p = \frac{P}{I}.
+            \end{equation}
+
+            The synchrotron radiation from AGN is polarised, though this polarisation is not always detectable \citeneeded \todo{forward reference to the next section?}. Additionally, the most common non-AGN cause for radio emission is star-formation, which does not have detectable polarisation. Polarisation is therefore an excellent way to confirm that a radio source is an AGN.
+
+            Polarisation can also be used to describe the magnetic structure of both AGN and intervening medium.
+
+        % Following \citet{condon_essential_2016}, we will derive the expected power spectrum of synchrotron radiation. A \emph{non-}relativistic charged particle moving at velocity $\vec v$ in a magnetic field $\vec B$ is subject to the Lorentz force $\vec F$:
+        % \begin{equation}
+        %     \vec F = q \vec v \times \vec B.
+        % \end{equation}
+        % The Lorentz force causes the particle to spiral with a fixed angular frequency independent of its speed:
+        % \begin{equation}
+        %     \label{eq:angular-gyro-frequency}
+        %     \omega_G = \frac{qB}{m}.
+        % \end{equation}
+        % Such a particle will emit \defn{gyro radiation} at the \defn{gyro frequency} $\nu_G = \omega_G/2\pi$. Synchrotron radiation is gyro radiation Lorentz transformed to energies much greater than $mc^2$. The power emitted by gyro radiation is given by Larmor's equation:
+        % \begin{equation}
+        %     \label{eq:larmor}
+        %     P = \frac{2}{3} \frac{1}{4\pi\epsilon_0} \frac{q^2}{c^3} \dot v_\perp^2
+        % \end{equation}
+        % where $\dot v_\perp$ is the component of the particle's acceleration perpendicular to the magnetic field. Transform coordinates to the rest frame of the magnetic field:
+        % \begin{equation}
+        %     \dot v_\perp \to \gamma^2 \dot v_\perp, P \to P
+        % \end{equation}
+        % where $\gamma$ is the Lorentz factor
+        % \begin{equation}
+        %     \gamma = \frac{1}{\sqrt{1 - \frac{v^2}{c^2}}}.
+        %     \label{sec:lorentz-factor}
+        % \end{equation}
+        % This gives the observed power of synchrotron radiation for a charged particle:
+        % \begin{equation}
+        %     \label{eq:larmor-boosted}
+        %     P = \frac{2}{3} \frac{1}{4\pi\epsilon_0} \frac{q^2\gamma^4}{c^3} \dot v_\perp^2.
+        % \end{equation}
+        % It remains to find $\dot v_\perp^2$ in terms of the magnetic field. The acceleration for a relativistic orbiting particle is
+        % \begin{equation}
+        %     \dot v_\perp = \frac{\omega_G}{\gamma} v_\perp
+        % \end{equation}
+        % and substituting the angular gyro frequency (\autoref{eq:angular-gyro-frequency}) gives
+        % \begin{equation}
+        %     \dot v_\perp = \frac{qB}{m\gamma} v_\perp = \frac{q}{m\gamma} |\vec v \times \vec B|.
+        % \end{equation}
+        % This can then be substituted into \autoref{eq:larmor-boosted} to obtain the synchrotron power radiated by a single charged particle:
+        % \begin{equation}
+        %     \label{eq:synchrotron-radiation-single}
+        %     P = \frac{2}{3} \frac{1}{4\pi\epsilon_0} \frac{q^4 \gamma^2}{m^2 c^3} (\vec v \times \vec B)^2.
+        % \end{equation}
+        % For an electron, we can let $q = q_e$ and $m = m_e$ and write the power in terms of the Thomson cross-section $\sigma_T$:
+        % \begin{equation}
+        %     \label{eq:synchrotron-radiation-single-thomson}
+        %     P = \epsilon_0 \sigma_T c \gamma^2 (\vec v \times \vec B)^2
+        % \end{equation}
+        % noting that
+        % \begin{equation}
+        %     \label{eq:thomson-cross-section}
+        %     \sigma_T = \frac{8\pi}{3} \left(\frac{1}{4\pi\epsilon_0} \frac{e^2}{m_e c^2}\right)^2.
+        % \end{equation}
+        % Assuming an isotropic distribution of electrons in a plasma, we can integrate over all angles to find the average synchrotron power emitted by a single electron:
+        % \begin{equation}
+        %     \label{eq:average-single-synchrotron-power}
+        %     \mathbb{E}[P] = \frac{2}{3} \epsilon_0 \sigma_T c \gamma^2 vB
+        % \end{equation}
+        % We can use this to find the expected power spectrum of synchrotron radiation from an ensemble of electrons. Assuming that the electrons follow a power law energy distribution (which they generally do\citeneeded), the number density of electrons at a given energy $E$ is
+        % \begin{equation}
+        %     n(E) \propto E^{-\delta}
+        % \end{equation}
+        % where $\delta$ is a constant. Further assuming that each electron radiates at the frequency $\gamma^2 \nu_G$, then 
 
 
 \section{Observing Radio Sources}
@@ -19,4 +173,32 @@ This section needs to talk about how the physics of AGN affects observations and
 \section{Machine Learning for Radio Astroninformatics}
 \label{sec:radio-astroinformatics}
 
-Here we need to talk about the fundamentals of machine learning. We'll start with problem formulations and what machine learning is, then discuss terminology and classification. We need to cover the difficulties of labels and the lack of groundtruth in astronomy, the problem and handling of uncertainties, and feature selection. We also need to talk about the importance (or unimportance?) of interpretability and how this ties into astronomy, and the unique idea of using machine learning as a pathway to understand something important about physics.
+% Here we need to talk about the fundamentals of machine learning. We'll start with problem formulations and what machine learning is, then discuss terminology and classification. We need to cover the difficulties of labels and the lack of groundtruth in astronomy, the problem and handling of uncertainties, and feature selection. We also need to talk about the importance (or unimportance?) of interpretability and how this ties into astronomy, and the unique idea of using machine learning as a pathway to understand something important about physics.
+
+    Machine learning was once described to me by an anonymous supervisor as ``the statistics kept at the back of the textbook''. But even accepting its grounding in statistics, is this really an accurate description of the field? I think of machine learning as a data-driven way of formalising predictive problems mathematically, converting between different kinds of statistical problems, and an accompanying set of methods and practices for handling data and uncertainty. The eventual goal is to design some method or algorithm that automatically discovers useful information in (potentially very large) data sets. The machine learning component of this thesis will require an understanding of linear algebra, probability, statistics, and vector calculus. I will begin describing machine learning by exploring the concept of a predictor.
+    % \citet{deisenroth_mathematics_2020} seperate machine learning into three core components: the data, the model, and learning.
+
+    \subsection{Predictors}
+    \label{sec:predictors}
+
+        A \defn{predictor} is some function that produces an output from some given input. They can be represented as functions or as probabilistic models, depending on the machine learning approach being undertaken. As a function, a predictor maps from some input domain $\mathcal X$ into some output domain $\mathcal Y$, and is usually written as
+        \begin{equation}
+            f : \mathcal X \to \mathcal Y.
+        \end{equation}
+        $\mathcal X$ and $\mathcal Y$ are commonly (but certainly not always) a real vector space $\mathbb R^n$. Because the goal of machine learning involves \emph{finding} a suitable function $f$ for the task at hand, the set of functions is usually constrained. For example, if $\mathcal X = \mathbb{R}^n$, we might require that $f$ is a linear function $\mathbb R^n \to \mathbb R$, easily parametrised by $n + 1$ constants.
+
+        As a probabilistic model, a predictor is a joint probability distribution between observations and hidden parameters \citep{deisenroth_mathematics_2020}. Using a probabilistic predictor allows us to formally describe and work with uncertainty both in the input space and output space. Such a predictor is usually parametrised by a finite set of parameters, which already includes most common probability distributions.
+
+    \subsection{Data and representation}
+    \label{sec:data-and-representation}
+
+        Machine learning is centred on data and the extraction of information from that data. Data can include anything from numeric information, documents, or images to spectra or galaxies. A collection of data is called a \defn{dataset} and an element of this dataset is (interchangably) called an \defn{example} or \defn{instance}. Generally, data are not easy to work with in their original form and must be converted into a numerical representation before use. As it is relatively easy to work with both numerically and analytically, we usually convert our data into real vectors in $\mathbb R^n$. Each axis of this vector space is called a \defn{feature}. Features are non-trivial to choose, and finding good features often requires the expertise of a human who is well-versed in the original dataset (a \defn{domain expert}).
+
+        % This conversion is called an \defn{embedding} of that data into a space. One way to embed data into a vector space is to use real numbers representative of different features and details of the original data. These values are called \defn{features} and the resulting embedding is called a \defn{feature representation}. 
+
+    % There are many sub-fields of machine learning, divided mainly by the kind of predictions required. The most important sub-field that we will use in this thesis is classification.
+
+    \subsection{Classification}
+    \label{sec:classification}
+
+        \defn{Classification} is the problem of categorising objects into classes. 
